fixed footer to stay at bottom with no gaps

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -97,9 +97,10 @@ body {
 .contact_background {
     display: flex;
     justify-content: center;
+    align-content: center;
     background-size: cover;
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("collaboration.jpg") no-repeat;
-    height: 817px;
+    height: 855px;
 }
 
 .form-wrapper {
@@ -187,10 +188,10 @@ textarea {
 /*footer*/
 
 footer {
-	position: fixed;
+	position: relative;
 	bottom: 0;
 	width: 100%;
-    height: 100px;
+    height: fit-content;
     background-color: #02334B ;
 }
 .footer-container {
